WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
143816
Minor AudioContext cleanup
https://bugs.webkit.org/show_bug.cgi?id=143816
Summary
Minor AudioContext cleanup
Alexey Proskuryakov
Reported
2015-04-15 23:49:08 PDT
A few things that I noticed while looking at AudioContext.
Attachments
proposed patch
(8.63 KB, patch)
2015-04-15 23:52 PDT
,
Alexey Proskuryakov
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2015-04-15 23:52:44 PDT
Created
attachment 250905
[details]
proposed patch
WebKit Commit Bot
Comment 2
2015-04-15 23:54:26 PDT
Attachment 250905
[details]
did not pass style-queue: ERROR: Source/WebCore/Modules/webaudio/AudioContext.cpp:194: Should be indented on a separate line, with the colon or comma first on that line. [whitespace/indent] [4] ERROR: Source/WebCore/Modules/webaudio/AudioContext.cpp:195: Wrong number of spaces before statement. (expected: 8) [whitespace/indent] [4] ERROR: Source/WebCore/Modules/webaudio/AudioContext.cpp:198: Wrong number of spaces before statement. (expected: 8) [whitespace/indent] [4] Total errors found: 3 in 3 files If any of these errors are false positives, please file a bug against check-webkit-style.
Jer Noble
Comment 3
2015-04-16 08:35:11 PDT
(In reply to
comment #2
)
>
Attachment 250905
[details]
did not pass style-queue: > > > ERROR: Source/WebCore/Modules/webaudio/AudioContext.cpp:194: Should be > indented on a separate line, with the colon or comma first on that line. > [whitespace/indent] [4]
This looks like webkit-style is confused by the FIXME line here. It should probably be of the format: "// FIXME(105870): This assertion fails on tests sometimes", and maybe be on the previous line. But the error message here seems to just be a bug in check-webkit-style.
WebKit Commit Bot
Comment 4
2015-04-16 09:20:12 PDT
Comment on
attachment 250905
[details]
proposed patch Clearing flags on attachment: 250905 Committed
r182889
: <
http://trac.webkit.org/changeset/182889
>
WebKit Commit Bot
Comment 5
2015-04-16 09:20:16 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug