Minor AudioContext cleanup https://bugs.webkit.org/show_bug.cgi?id=143816

Reviewed by Jer Noble.

* Modules/webaudio/AudioContext.cpp:
(WebCore::AudioContext::~AudioContext):
(WebCore::AudioContext::lazyInitialize):
(WebCore::AudioContext::stop):
(WebCore::AudioContext::derefNode):
(WebCore::AudioContext::scheduleNodeDeletion):
(WebCore::AudioContext::deleteMarkedNodes):
(WebCore::AudioContext::stopDispatch): Deleted.
(WebCore::AudioContext::deleteMarkedNodesDispatch): Deleted.
* Modules/webaudio/AudioContext.h:

* Modules/webaudio/AudioNode.cpp: (WebCore::AudioNode::~AudioNode):


Canonical link: https://commits.webkit.org/161830@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@182889 268f45cc-cd09-0410-ab3c-d52691b4dbfc