Source/WebCore/Modules/webaudio/AudioContext.h
@@ -274,13 +274,9 @@ private:
     enum class State { Suspended, Running, Interrupted, Closed };
     void setState(State);
 
-    // ScriptExecutionContext calls stop twice.
-    // We'd like to schedule only one stop action for them.
-    static void stopDispatch(void* userData);
     void clear();
 
     void scheduleNodeDeletion();
-    static void deleteMarkedNodesDispatch(void* userData);
 
     virtual void mediaCanStart() override;
 
